# c2psocket

client/: CMakeLists.txt  FileHelper.h  client.cpp
server/: psocket.py  server.cpp
